Modify delete, mark, and unmark to work with keywords.
If the parameter provided to delete, mark, and unmark commands
are not non-negative integers, then they will instead try to find
tasks with names that match the parameter.

If there is exactly 1 matching task, then that will be the task
that will be subjected to the command.